; ModuleID = '/home/carl/AnghaBench/redis/src/extr_ziplist.c_ziplistPush.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_ziplist.c_ziplistPush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZIPLIST_HEAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ziplistPush(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* @ZIPLIST_HEAD, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %4
  %14 = load i8*, i8** %5, align 8
  %15 = call i8* @ZIPLIST_ENTRY_HEAD(i8* %14)
  br label %19

16:                                               ; preds = %4
  %17 = load i8*, i8** %5, align 8
  %18 = call i8* @ZIPLIST_ENTRY_END(i8* %17)
  br label %19

19:                                               ; preds = %16, %13
  %20 = phi i8* [ %15, %13 ], [ %18, %16 ]
  store i8* %20, i8** %9, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i8* @__ziplistInsert(i8* %21, i8* %22, i8* %23, i32 %24)
  ret i8* %25
}

declare dso_local i8* @ZIPLIST_ENTRY_HEAD(i8*) #1

declare dso_local i8* @ZIPLIST_ENTRY_END(i8*) #1

declare dso_local i8* @__ziplistInsert(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
